--- a/DashBoard/Info.plist
+++ b/DashBoard/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>DashBoard</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -25,6 +27,28 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>蓝牙权限</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>日历权限</string>
+	<key>NSCameraUsageDescription</key>
+	<string>相机权限</string>
+	<key>NSContactsUsageDescription</key>
+	<string>通讯录权限</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>定位权限2</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>定位权限</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>麦克风权限</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>相册权限</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>语音转文字权限</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
